--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babysitter",
+  "name": "smartsitter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.2",
