--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-google-autocomplete": "^2.7.3",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "reactstrap": "^9.2.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
