--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-flatpickr": "^3.10.13",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
