--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "reactstrap": "^9.2.1",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
