--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
+    "nouislider-react": "^3.4.2",
     "prop-types": "^15.8.1",
+    "raviger": "^4.1.2",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
@@ -28,7 +30,8 @@
     "reactstrap": "^9.2.1",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wnumb": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
