--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "smartsitter",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha --exit --no-timeouts -r ./test.options.js */*.spec.js"
   },
   "keywords": [
     "smartsitter"
@@ -16,17 +17,20 @@
     "@sendgrid/mail": "^8.1.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.4.0",
     "moment": "^2.29.4",
-    "mongodb": "^6.4.0",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.0.3",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "request-promise": "^4.2.6",
     "socket.io": "^4.7.4"
   }
 }
